used rewrite to move all Collectors.toList() to direct unodifyable toList()